tests/negative/gold/abstractF-test.gold
tests/negative/abstractF-test.toit:6:11: error: Expected name of declaration
  abstract
          ^
Compilation failed
